[package]
name = "tsurust-v2"
version = "0.1.0"
authors = ["Alejandro Alvarado <alejalvarado@paypal.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"